# Music-Style-Transfer

./: TestGenerateToken.py  TestTraining.py  pyproject.toml  training.ipynb
models/music_vae/: idx_to_token.pkl  music_vae.pth  token_to_idx.pkl
